Add basic index structure and question set

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div id="navbar">
+            <ul id="nav-items">
+                <li>New quiz</li>
+                <li>Instructions</li>
+            </ul>
+        </div>
+    </header>
+    <section id="quiz-question">
+
+    </section>
+    <section id="answers">
+        <section class="answer"></section>
+        <section class="answer"></section>
+        <section class="answer"></section>
+        <section class="answer"></section>
+    </section>
 </body>
 </html>
