--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
     </header>
     <section id="quiz-question">
-
+        <p>What is the airport code for <span id="airport"></span>?</p>
     </section>
     <section id="answers">
         <section class="answer"></section>
@@ -24,5 +24,6 @@
         <section class="answer"></section>
         <section class="answer"></section>
     </section>
+    <script src="assets/js/script.js" type="text/javascript"></script>
 </body>
 </html>
