--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <p>What is the airport code for <span id="airport"></span>?</p>
     </section>
     <section id="answers">
-        <section class="answer"></section>
-        <section class="answer"></section>
-        <section class="answer"></section>
-        <section class="answer"></section>
+        <button class="answer"></button>
+        <button class="answer"></button>
+        <button class="answer"></button>
+        <button class="answer"></button>
     </section>
     <script src="assets/js/script.js" type="text/javascript"></script>
 </body>
