Add jQuery and tidy up comments

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -19,10 +20,10 @@
         <p>What is the airport code for <span id="airport"></span>?</p>
     </section>
     <section id="answers">
-        <button class="answer"></button>
-        <button class="answer"></button>
-        <button class="answer"></button>
-        <button class="answer"></button>
+        <button class="answer answer1"></button>
+        <button class="answer answer2"></button>
+        <button class="answer answer3"></button>
+        <button class="answer answer4"></button>
     </section>
     <script src="assets/js/script.js" type="text/javascript"></script>
 </body>
