--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
         </div>
     </header>
     <section id="quiz-question">
+        <h2 id="question-number"></h2>
         <p>What is the airport code for <span id="airport"></span>?</p>
     </section>
     <section id="answers">
-        <button class="answer answer1"></button>
-        <button class="answer answer2"></button>
-        <button class="answer answer3"></button>
-        <button class="answer answer4"></button>
+        <button class="answer" id="answer1"></button>
+        <button class="answer" id="answer2"></button>
+        <button class="answer" id="answer3"></button>
+        <button class="answer" id="answer4"></button>
+    </section>
+    <section id="result"></section>
+    <section id="nav-buttons">
+
     </section>
     <script src="assets/js/script.js" type="text/javascript"></script>
 </body>
