--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     </section>
     <section id="result"></section>
     <section id="nav-buttons">
-
+        <button id="next-question">Next question</button>
     </section>
+    <section id="score"><p>Current score : <span id="current-score">0</span> out of 10.</p></section>
     <script src="assets/js/script.js" type="text/javascript"></script>
 </body>
 </html>
