--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <p>What is the airport code for <span id="airport"></span>?</p>
     </section>
     <section id="answers">
-        <button class="answer" id="answer1"></button>
-        <button class="answer" id="answer2"></button>
-        <button class="answer" id="answer3"></button>
-        <button class="answer" id="answer4"></button>
+        <button class="answer" id="answer1" onclick="checkAnswer(1)"></button>
+        <button class="answer" id="answer2" onclick="checkAnswer(2)"></button>
+        <button class="answer" id="answer3" onclick="checkAnswer(3)"></button>
+        <button class="answer" id="answer4" onclick="checkAnswer(4)"></button>
     </section>
     <section id="result"></section>
     <section id="nav-buttons">
