--- a/index.html
+++ b/index.html
@@ -4,33 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MS2 Project | Airport Code Quiz</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/stylesheet" />
 </head>
 <body>
     <header>
-        <div id="navbar">
-            <ul id="nav-items">
-                <li>New quiz</li>
-                <li>Instructions</li>
-            </ul>
+        <div class="row align-items-center">
+            <div class="col-md-12">
+                <h1 class="text-center">Airport Codes Quiz</h1>
+            </div>
         </div>
     </header>
-    <section id="quiz-question">
-        <h2 id="question-number"></h2>
-        <p>What is the airport code for <span id="airport"></span>?</p>
-    </section>
-    <section id="answers">
-        <button class="answer" id="answer1" onclick="checkAnswer(1)"></button>
-        <button class="answer" id="answer2" onclick="checkAnswer(2)"></button>
-        <button class="answer" id="answer3" onclick="checkAnswer(3)"></button>
-        <button class="answer" id="answer4" onclick="checkAnswer(4)"></button>
-    </section>
-    <section id="result"></section>
-    <section id="nav-buttons">
-        <button id="next-question">Next question</button>
-    </section>
-    <section id="score"><p>Current score : <span id="current-score">0</span> out of 10.</p></section>
+    <div class="row">
+    <div class="card text-center w-50 mx-auto">
+                <h5 id="question-number" class="card-header"></h5>
+                <p class="card-body">What is the airport code for <span id="airport"></span>?</p>
+                <button type="button" class="mb-2 answer btn btn-primary" id="answer1" onclick="checkAnswer(1)"></button>
+                <button type="button" class="mb-2 answer btn btn-primary" id="answer2" onclick="checkAnswer(2)"></button>
+                <button type="button" class="mb-2 answer btn btn-primary" id="answer3" onclick="checkAnswer(3)"></button>
+                <button type="button" class="mb-2 answer btn btn-primary" id="answer4" onclick="checkAnswer(4)"></button>
+                <div id="result">&nbsp;</div>
+                <div id="nav-buttons">
+                    <button type="button" class="btn btn-dark" id="next-question">Next question</button>
+                </div>
+            <div id="score"><p>Current score : <span id="current-score">0</span> out of 10.</p></div>
+            </div>
+        </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="assets/js/script.js" type="text/javascript"></script>
 </body>
 </html>
