--- a/index.html
+++ b/index.html
@@ -21,20 +21,21 @@
         </div>
     </header>
     <div class="row">
-    <div class="card text-center w-50 mx-auto">
+    <div class="card text-center w-50 mx-auto question-box">
                 <h5 id="question-number" class="card-header"></h5>
-                <p class="card-body">What is the airport code for <span id="airport"></span>?</p>
-                <button type="button" class="mb-2 answer btn btn-primary" id="answer1" onclick="checkAnswer(1)"></button>
-                <button type="button" class="mb-2 answer btn btn-primary" id="answer2" onclick="checkAnswer(2)"></button>
-                <button type="button" class="mb-2 answer btn btn-primary" id="answer3" onclick="checkAnswer(3)"></button>
-                <button type="button" class="mb-2 answer btn btn-primary" id="answer4" onclick="checkAnswer(4)"></button>
-                <div id="result">&nbsp;</div>
-                <div id="nav-buttons">
-                    <button type="button" class="btn btn-dark" id="next-question">Next question</button>
-                </div>
-            <div id="score"><p>Current score : <span id="current-score">0</span> out of 10.</p></div>
-            </div>
+                    <p class="card-body">What is the airport code for <span id="airport"></span>?</p>
+                    <button type="button" class="mb-2 answer btn btn-primary" id="answer1" onclick="checkAnswer(1)"></button>
+                    <button type="button" class="mb-2 answer btn btn-primary" id="answer2" onclick="checkAnswer(2)"></button>
+                    <button type="button" class="mb-2 answer btn btn-primary" id="answer3" onclick="checkAnswer(3)"></button>
+                    <button type="button" class="mb-2 answer btn btn-primary" id="answer4" onclick="checkAnswer(4)"></button>
+                    <div id="result">&nbsp;</div>
+                    <div id="nav-buttons">
+                        <button type="button" class="btn btn-dark" id="next-question">Next question</button>
+                    </div>
+                    <div id="score"><p>Current score : <span id="current-score">0</span> out of 10.</p></div>
+            
         </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="assets/js/script.js" type="text/javascript"></script>
