--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 </head>
 <body>
     <header>
-        <div class="row align-items-center">
-            <div class="col-md-12">
-                <h1 class="text-center">Airport Codes Quiz</h1>
+        <section>
+            <div class="row align-items-center">
+                <div class="col-md-12">
+                    <h1 class="text-center">Airport Codes Quiz</h1>
+                </div>
             </div>
-        </div>
+        </section>
     </header>
     <div class="row">
         <div class="card text-center w-50 mx-auto question-box">
