--- a/index.html
+++ b/index.html
@@ -16,20 +16,22 @@
         <section>
             <div class="row align-items-center">
                 <div class="col-md-12">
-                    <h1 class="text-center">Airport Codes Quiz</h1>
+                    <h1 class="text-center"><i class="fa-solid fa-plane-departure" aria-hidden="true"></i><br>Airport Codes Quiz</h1>
                 </div>
             </div>
         </section>
     </header>
-    <div class="row">
-        <div class="card text-center w-50 mx-auto question-box">
+        <section>
+        <div class="row">
+            <div class="card text-center w-50 mx-auto question-box">
                 <h5 id="question-number" class="card-header">Welcome to the Airport Codes Quiz</h5>
-                    <p class="card-body">How well do you know your airport codes?</p>
-                    <p class="card-body">Answer 10 questions to find out if you are a travel novice or travel expert.</p>
+                    <p class="card-body"><strong>How well do you know your airport codes?</strong></p>
+                    <p>Answer 10 questions to find out if you are a travel novice or travel expert.</p>
                     <button type="button" class="mb-2 answer btn btn-primary" onclick="runGame()">Start game</button>
-                    <button type="button" class="mb-2 answer btn btn-secondary" onclick="viewInstructions()">View instructions</button>            
-        </div>
-    </div>
+                    <button type="button" class="mb-3 answer btn btn-secondary" onclick="viewInstructions()">View instructions</button>            
+                </div>
+            </div>
+        </section>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c942d42d0a.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
