--- a/index.html
+++ b/index.html
@@ -22,18 +22,19 @@
             </div>
         </section>
     </header>
-        <>
-        <div class="row">
-            <div class="card text-center w-75 mx-auto question-box">
-                <h5 id="question-number" class="card-header">Welcome to the Airport Codes Quiz</h5>
+    <main>
+        <section>
+            <div class="row">
+                <div class="card text-center w-75 mx-auto question-box">
+                    <h5 id="question-number" class="card-header">Welcome to the Airport Codes Quiz</h5>
                     <p class="card-body"><strong>How well do you know your airport codes?</strong></p>
                     <p>Answer 10 questions to find out if you are a travel novice or travel expert.</p>
                     <button type="button" class="mb-2 answer btn btn-primary" onclick="runGame()">Start game</button>
                     <button type="button" class="mb-3 answer btn btn-secondary" onclick="viewInstructions()">View instructions</button>            
                 </div>
             </div>
-
         </section>
+    </main>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c942d42d0a.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
