--- a/index.html
+++ b/index.html
@@ -1,43 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MS2 Project | Airport Code Quiz</title>
-    <link rel="icon" type="image/x-icon" href="/assets/image/favicon.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">    
-</head>
-<body>
-    <header>
-        <section>
-            <div class="row align-items-center">
-                <div class="col-md-12">
-                    <h1 class="text-center"><i class="fa-solid fa-plane-departure" aria-hidden="true"></i><br>Airport Codes Quiz</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>MS2 Project | Airport Code Quiz</title>
+        <link rel="icon" type="image/x-icon" href="/assets/image/favicon.ico">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="assets/css/style.css">    
+    </head>
+    <body>
+        <!-- Title section -->
+        <header>
+            <section>
+                <div class="row align-items-center">
+                    <div class="col-md-12">
+                        <h1 class="text-center"><i class="fa-solid fa-plane-departure" aria-hidden="true"></i><br>Airport Codes Quiz</h1>
+                    </div>
                 </div>
-            </div>
-        </section>
-    </header>
-    <main>
-        <section>
-            <div class="row">
-                <div class="card text-center w-75 mx-auto question-box">
-                    <h5 id="question-number" class="card-header">Welcome to the Airport Codes Quiz</h5>
-                    <p class="card-body"><strong>How well do you know your airport codes?</strong></p>
-                    <p>Answer 10 questions to find out if you are a travel novice or travel expert.</p>
-                    <button type="button" class="mb-2 answer btn btn-primary" onclick="runGame()">Start game</button>
-                    <button type="button" class="mb-3 answer btn btn-secondary" onclick="viewInstructions()">View instructions</button>            
+            </section>
+        </header>
+        <!-- End title section -->
+
+        <!-- Main box for quiz content and questions -->
+        <main>
+            <section>
+                <div class="row">
+                    <div class="card text-center w-75 mx-auto question-box">
+                        <h5 id="question-number" class="card-header">Welcome to the Airport Codes Quiz</h5>
+                        <p class="card-body"><strong>How well do you know your airport codes?</strong></p>
+                        <p>Answer 10 questions to find out if you are a travel novice or travel expert.</p>
+                        <button type="button" class="mb-2 answer btn btn-primary" onclick="runGame()">Start game</button>
+                        <button type="button" class="mb-3 answer btn btn-secondary" onclick="viewInstructions()">View instructions</button>            
+                    </div>
                 </div>
-            </div>
-        </section>
-    </main>
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/c942d42d0a.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="assets/js/script.js"></script>
-</body>
+            </section>
+        </main>
+        <!-- End main question box -->
+
+        <!-- Script files for jQuery, FontAwesome, Bootstrap and quiz functions -->
+        <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/c942d42d0a.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <script src="assets/js/script.js"></script>
+        <!-- End script files -->
+        
+    </body>
 </html>
