Add 404 page and tweak text color in CSS

--- a/404.html
+++ b/404.html
@@ -18,23 +18,21 @@
             <section>
                 <div class="row align-items-center">
                     <div class="col-md-12">
-                        <h1 class="white-text text-center"><i class="fa-solid fa-plane-departure" aria-hidden="true"></i><br>Airport Codes Quiz</h1>
+                        <h1 class="text-center white-text"><i class="fa-solid fa-plane-departure" aria-hidden="true"></i><br>Airport Codes Quiz</h1>
                     </div>
                 </div>
             </section>
         </header>
         <!-- End title section -->
 
-        <!-- Main box for quiz content and questions -->
+        <!-- Main box for 404 message -->
         <main>
             <section>
                 <div class="row">
-                    <div class="card text-center w-75 mx-auto question-box">
-                        <h5 id="question-number" class="card-header">Welcome to the Airport Codes Quiz</h5>
-                        <p class="card-body"><strong>How well do you know your airport codes?</strong></p>
-                        <p>Answer 10 questions to find out if you are a travel novice or travel expert.</p>
-                        <button type="button" class="mb-2 answer btn btn-primary" onclick="runGame()">Start game</button>
-                        <button type="button" class="mb-3 answer btn btn-secondary" onclick="viewInstructions()">View instructions</button>            
+                    <div class="col-sm-12 my-auto">
+                        <h1 class="white-text">404</h1>
+                        <h2 class="white-text">Page not found</h2> 
+                        <button class="btn btn-primary" onclick="window.location.href='index.html';">Go to the quiz</button>         
                     </div>
                 </div>
             </section>
